--- a/templates/news_update.html
+++ b/templates/news_update.html
@@ -12,7 +12,9 @@
         {% csrf_token %}
         <div class="form-group col-md-6">
 
-            {{ form.as_p}}
+            {{ form.media }}
+            {{ form.title | safe}}
+            {{ form.content | safe}}
 
             <input class="btn btn-success" type="submit" value="更新" />
         </div>
