--- a/BackEnd/templates/BackEnd/index/index.html
+++ b/BackEnd/templates/BackEnd/index/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +6,7 @@
     <title>新增消息</title>
 </head>
 <body>
+    後端管理
     {% block content %}
     <form action="" enctype="multipart/form-data" method="POST">
         {% csrf_token %}
