--- a/BackEnd/templates/BackEnd/news_show.html
+++ b/BackEnd/templates/BackEnd/news_show.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'BackEnd/base/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
-</head>
 
-<body>
-    {% block content %}
- {{news.content|safe}}
-    {% endblock %}
-</body>
-
-</html>
+{% block main %}
+{{news.content|safe}}
+{% endblock %}
