--- a/BackEnd/templates/admin/base_site.html
+++ b/BackEnd/templates/admin/base_site.html
@@ -4,6 +4,6 @@
 {% block branding %}
     <a href="{% url 'admin:index' %}" class="django-admin-logo">
         <!-- Django Administration -->
-        <img height="60" src="{% static "img/9image0.jpg" %}" alt="{{ site_header|default:_('Django administration') }}">
+        <img height="60" src="{% static "img/admin/login.jpg" %}" alt="{{ site_header|default:_('Django administration') }}">
     </a>
 {% endblock branding %}
