更改資料夾位置

--- a/FrontEnd/templates/FrontEnd/index/index.html
+++ b/FrontEnd/templates/FrontEnd/index/index.html
@@ -7,8 +7,7 @@
 {% block import %}
 
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap/bootstrap.min.css '%}" />
-<link rel="stylesheet" type="text/css" href="{% static 'css/fontawesome-free-6.0.0-web/css/all.min.css '%}" />
+<link rel="stylesheet" type="text/css" href="{% static 'base/css/fontawesome-free-6.0.0-web/css/all.min.css '%}" />
 
 {% endblock %}
 
