--- a/FrontEnd/templates/FrontEnd/course/course_list_專業.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list_專業.html
@@ -1,38 +1,59 @@
 <link rel="stylesheet" href="../../../../static/css/course/course_list.css">
 
 <div class="container">
-    <div class="box"><div class="coursephoto"></div><br>
-        <div class="classdate">2022/01/01</div><div class="markimg"><img src="../../../../static/img/course/核心.png"></div>
+    <div class="box">
+        <div class="markbox">
+            <p class="mark">專業</p>
+        </div>
+        <div class="coursephoto"></div><br>
+        <div class="classdate">2022/01/01</div>
+        <div class="classtitle">課程名稱</div>
+        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
+    </div>
+    <div class="box">
+        <div class="markbox">
+            <p class="mark">專業</p>
+        </div>
+        <div class="coursephoto"></div><br>
+        <div class="classdate">2022/01/01</div>
+        <div class="classtitle">課程名稱</div>
+        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
+    </div>
+    <div class="box">
+        <div class="markbox">
+            <p class="mark">專業</p>
+        </div>
+        <div class="coursephoto"></div><br>
+        <div class="classdate">2022/01/01</div>
+        <div class="classtitle">課程名稱</div>
+        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
+    </div>
+    <div class="box">
+        <div class="markbox">
+            <p class="mark">專業</p>
+        </div>
+        <div class="coursephoto"></div><br>
+        <div class="classdate">2022/01/01</div>
+        <div class="classtitle">課程名稱</div>
+        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
+    </div>
+    <div class="box">
+        <div class="markbox">
+            <p class="mark">專業</p>
+        </div>
+        <div class="coursephoto"></div><br>
+        <div class="classdate">2022/01/01</div>
+        <div class="classtitle">課程名稱</div>
+        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
+    </div>
+    <div class="box">
+        <div class="markbox">
+            <p class="mark">專業</p>
+        </div>
+        <div class="coursephoto"></div><br>
+        <div class="classdate">2022/01/01</div>
         <div class="classtitle">課程名稱</div>
         <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
     </div>
 
-    <div class="box"><div class="coursephoto"></div><br>
-        <div class="classdate">2022/01/01</div><img src="../../../../static/img/course/核心.png" class="markimg">
-        <div class="classtitle">課程名稱</div>
-        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
-    </div>
-
-    <div class="box"><div class="coursephoto"></div><br>
-        <div class="classdate">2022/01/01</div><img src="../../../../static/img/course/核心.png" class="markimg">
-        <div class="classtitle">課程名稱</div>
-        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
-    </div>
-    <div class="box"><div class="coursephoto"></div><br>
-        <div class="classdate">2022/01/01</div><img src="../../../../static/img/course/核心.png" class="markimg">
-        <div class="classtitle">課程名稱</div>
-        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
-    </div>
-
-    <div class="box"><div class="coursephoto"></div><br>
-        <div class="classdate">2022/01/01</div><img src="../../../../static/img/course/核心.png" class="markimg">
-        <div class="classtitle">課程名稱</div>
-        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
-    </div>
-
-    <div class="box"><div class="coursephoto"></div><br>
-        <div class="classdate">2022/01/01</div><img src="../../../../static/img/course/核心.png" class="markimg">
-        <div class="classtitle">課程名稱</div>
-        <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
-    </div>
 </div>
