--- a/static/css/course/course_list.css
+++ b/static/css/course/course_list.css
@@ -15,7 +15,6 @@
     width: 100%; height: 200px; background-color: #c4c4c4;
 }
 .coursephoto{
-
     width: 100%;
     /*margin: auto;*/
 }
@@ -30,9 +29,19 @@
     align-items: center;    text-align: center;
     color: #000000;
 }
-.markimg{
-    position: relative; top: 10px; right: 20px;
-    /*margin-left: 77%;*/
+.markbox{
+    width: 20%; height: 32px;
+    position: relative; 
+    top:58%;  right: 0;   left:80%;
+    background-color: #FA7575;
+    font-weight: 500;   font-size: 20px;  line-height: 23px;
+    /*margin-left: 85%;*/
+    align-items: center;
+    display: flex;
+}
+.mark{
+    padding-left: 12px;
+    color: rgb(255, 255, 255);
 }
 .classdate{
     font-family: Roboto;
