--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -1,9 +1,10 @@
 <link rel="stylesheet" href="../../../../static/css/course/course_list.css">
 
+<section class="container-0">
 <div class="container">
     <div class="box">
         <div class="markbox">
-            <p class="mark">專業</p>
+            <p class="mark">核心</p>
         </div>
         <div class="coursephoto"></div><br>
         <div class="classdate">2022/01/01</div>
@@ -12,7 +13,7 @@
     </div>
     <div class="box">
         <div class="markbox">
-            <p class="mark">專業</p>
+            <p class="mark">核心</p>
         </div>
         <div class="coursephoto"></div><br>
         <div class="classdate">2022/01/01</div>
@@ -21,7 +22,7 @@
     </div>
     <div class="box">
         <div class="markbox">
-            <p class="mark">專業</p>
+            <p class="mark">核心</p>
         </div>
         <div class="coursephoto"></div><br>
         <div class="classdate">2022/01/01</div>
@@ -57,3 +58,4 @@
     </div>
 
 </div>
+</section>
