--- a/FrontEnd/templates/FrontEnd/course-page/course-page.html
+++ b/FrontEnd/templates/FrontEnd/course-page/course-page.html
@@ -1,4 +1,14 @@
-<link rel="stylesheet" href="../../../../static/css/course-page/course-page.css">
+{% extends 'FrontEnd/base/base.html' %}
+
+{% block import %}
+
+{% load static%}
+<link rel="stylesheet" href="{% static 'css/course-page/course-page.css' %}">
+
+{% endblock %}
+
+{% block main %}
+
 
 <section class="container">
     
@@ -14,3 +24,5 @@
     
 
 </section>
+
+{% endblock %}
