--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -4,12 +4,23 @@
 
 {% load static%}
 <link rel="stylesheet" href="{% static 'css/course/course_list.css' %}">
+<link rel="stylesheet" href="{% static 'base/css/fontawesome-free-6.0.0-web/css/all.min.css' %}">
 
 {% endblock %}
 
 {% block main %}
 
+
 <section class="container-0">
+    <div class="searchspace">
+        <div class="searchbox"><p class="searchtext">　Search..</p></div>
+        <span><div class="rightspace">
+            <i class="fa-solid fa-wrench"></i><div class="wire"><p class="content">專業實作課程</p></div>
+            <i class="fa-solid fa-gavel"></i><div class="wire"><p class="content">核心實作課程</p></div>
+            <i class="fa-solid fa-hammer"></i><p class="content">微學分課程及工作訪</p>
+        </div></span>
+    </div>
+
     <div class="container">
         <div class="box">
             <div class="markbox">
