--- a/static/css/course/course_list.css
+++ b/static/css/course/course_list.css
@@ -8,6 +8,37 @@
     flex-flow: row wrap;
     justify-content: center;
 }
+.searchspace{
+    margin: 30px auto; display: flex; align-items: center;
+    width:62%; height:8%;
+}
+.searchbox{
+    width: 24%; height: 35px ; position: relative;
+    right: 0%;
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 5px;
+    display: flex; align-items: center;
+}
+.searchtext{
+    font-size: 20px; color: #CCCCCC;
+}
+.rightspace{
+    display: flex; align-items: center;
+    width: auto; height: 50%;
+    position: relative;  left: 43%;
+    font-size: 22px; ;line-height: 26px;
+    text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
+}
+.content{
+    margin: auto 12px auto 10px;
+}
+.wire{
+     border-right: 2px solid #C4C4c4;
+     margin-right:12px ;
+}
+
 .box{
     float: left;
     width: 323px;
