--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -44,24 +44,36 @@
         </div>
         <div class="box">
             <div class="markbox">
-                <p class="mark">專業</p>
+                <p class="amark">${classbox.type}</p>
             </div>
             <div class="coursephoto"></div><br>
-            <div class="classdate">2022/01/01</div>
-            <div class="classtitle">課程名稱</div>
-            <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
-        </div>
-        <div class="box">
-            <div class="markbox">
-                <p class="mark">專業</p>
-            </div>
-            <div class="coursephoto"></div><br>
-            <div class="classdate">2022/01/01</div>
-            <div class="classtitle">課程名稱</div>
-            <div class="classcontent">[課程介紹]<br>　　介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介...... </div>
+            <div class="classdate">${classbox.date}</div>
+            <div class="classtitle">${classbox.classname}</div>
+            <div class="classcontent">${classbox.classtext} </div>
         </div>
 
     </div>
 </section>
+
+<script>
+    let classvue = new Vue({
+        el: '#app',
+        delimiters: ['${', '}'],
+        data: {
+            search: "",
+            classbox: [{ "classname": "x", "classtext": "123" }, { "classname": "xEE", "classtext": "1243" }]
+        },
+        computed: {
+            filteredList() {
+                return this.classbox.filter(post => {
+                    return post.classname.includes(this.search)
+                })
+            }
+        }
+
+    })
+
+
+</script>
 
 {% endblock %}
