--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -5,6 +5,7 @@
 {% load static%}
 <link rel="stylesheet" href="{% static 'css/course/course_list.css' %}">
 <script src="{% static 'js/vue.js' %}"> </script>
+<script src="{% static 'js/axios.min.js' %}"> </script>
 <link rel="stylesheet" href="{% static 'css/fontawesome-free-6.0.0-web/css/all.min.css' %}">
 
 
@@ -16,18 +17,18 @@
 <section class="container-0" id="app">
     <div class="searchspace">
         <input class="searchbox" type="text" v-model="search" placeholder="Search 課程名稱.." />
-            <div class="rightspace">
-                <span class="fa-solid fa-wrench"></span>
-                <div class="wire">
-                    <p class="content">專業實作課程</p>
-                </div>
-                <span class="fa-solid fa-gavel"></span>
-                <div class="wire">
-                    <p class="content">核心實作課程</p>
-                </div>
-                <span class="fa-solid fa-hammer"></span>
-                <p class="content">微學分課程及工作訪</p>
+        <div class="rightspace">
+            <span class="fa-solid fa-wrench"></span>
+            <div class="wire">
+                <p class="content" @click="changeType('專業')">專業實作課程</p>
             </div>
+            <span class="fa-solid fa-gavel"></span>
+            <div class="wire">
+                <p class="content" @click="changeType('核心')">核心實作課程</p>
+            </div>
+            <span class="fa-solid fa-hammer"></span>
+            <p class="content">微學分課程及工作訪</p>
+        </div>
     </div>
 
     <div class="container">
@@ -36,28 +37,62 @@
             <div class="markbox">
                 <p class="amark">${classbox.type}</p>
             </div>
-            <div class="coursephoto"></div><br>
-            <div class="classdate">${classbox.date}</div>
-            <div class="classtitle">${classbox.classname}</div>
-            <div class="classcontent">${classbox.classtext} </div>
+            <!-- <div class="coursephoto">
+
+            </div><br> -->
+            <figure>
+                <img class="coursephoto" v-bind:src="'media/'+classbox.image" v-bind:alt="classbox.image">
+            </figure>
+            <div class="classdate">${classbox.update_date}</div>
+            <div class="classtitle">${classbox.title}</div>
+            <div class="classcontent" v-html="classbox.content"> </div>
         </div>
 
     </div>
 </section>
 
 <script>
+
+    axios.defaults.xsrfCookieName = 'csrftoken'; //need this for method:post
+    axios.defaults.xsrfHeaderName = 'X-CSRFToken'; //need this for method:post
     let classvue = new Vue({
         el: '#app',
         delimiters: ['${', '}'],
         data: {
             search: "",
-            classbox: [{ "classname": "x", "classtext": "123" }, { "classname": "xEE", "classtext": "1243" }]
+            type: "",
+            classbox: []
+        },
+        mounted: function () {
+            axios.post("{% url 'manage' 'course' %}")
+                .then((response) => {
+                    console.log(response.data.datalist[0]);
+                    this.classbox = response.data.datalist;
+                })
+                .catch((error) => console.log(error));
+
+        },
+        methods: {
+            changeType(gettype) {
+                if (this.type == gettype)
+                    this.type = ""
+                else
+                    this.type = gettype
+            }
+
         },
         computed: {
+
             filteredList() {
-                return this.classbox.filter(post => {
-                    return post.classname.includes(this.search)
-                })
+                if (this.type === "") {
+                    return this.classbox.filter(box => {
+                        return box.title.includes(this.search)
+                    })
+                } else {
+                    return this.classbox.filter(box => {
+                        return box.type.includes(this.type)
+                    })
+                }
             }
         }
 
