--- a/static/css/course/course_list.css
+++ b/static/css/course/course_list.css
@@ -1,66 +1,128 @@
-.container{
+.cintainer-0 {
+    font-family: Roboto;
+    font-style: normal;
+}
+
+.container {
     margin: auto;
     width: 80%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
 }
-.box{
+
+.searchspace {
+    margin: 30px auto;
+    display: flex;
+    align-items: center;
+    width: 62%;
+    height: 8%;
+}
+
+.searchbox {
+    width: 24%;
+    height: 35px;
+    position: relative;
+    right: 0%;
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.searchtext {
+    font-size: 20px;
+    color: #CCCCCC;
+}
+
+.rightspace {
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: 50%;
+    position: relative;
+    left: 43%;
+    font-size: 22px;
+    ;
+    line-height: 26px;
+    text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
+}
+
+.content {
+    margin: auto 12px auto 10px;
+}
+
+.wire {
+    border-right: 2px solid #C4C4c4;
+    margin-right: 12px;
+    cursor: pointer;
+}
+
+.box {
     float: left;
     width: 323px;
-    margin-left: 50px;margin-right:50px;margin-bottom: 80px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 80px;
     padding: auto;
 }
-.coursephoto{
-    width: 100%; height: 200px; background-color: #c4c4c4;
-}
-.coursephoto{
+
+.coursephoto {
     width: 100%;
-    /*margin: auto;*/
 }
-.classtitle{
-    font-family: Roboto;
-    font-style: normal;
+
+
+.classtitle {
     font-weight: 500;
     font-size: 28px;
     line-height: 33px;
     margin-bottom: 12px;
     display: flex;
-    align-items: center;    text-align: center;
+    align-items: center;
+    text-align: center;
     color: #000000;
 }
-.markbox{
-    width: 20%; height: 32px;
-    position: relative; 
-    top:58%;  right: 0;   left:80%;
+
+.markbox {
+    width: 20%;
+    height: 32px;
+    position: relative;
+    top: 58%;
+    right: 0;
+    left: 80%;
     background-color: #FA7575;
-    font-weight: 500;   font-size: 20px;  line-height: 23px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
     /*margin-left: 85%;*/
     align-items: center;
     display: flex;
 }
-.mark{
+
+.amark {
     padding-left: 12px;
     color: rgb(255, 255, 255);
 }
-.classdate{
-    font-family: Roboto;
-    font-style: normal;
+
+.classdate {
     font-weight: 500;
     font-size: 24px;
     line-height: 28px;
     display: flex;
-    align-items: center;    text-align: center;
+    align-items: center;
+    text-align: center;
     color: #000000;
-    margin-top: 9px; margin-bottom: 12px;
+    margin-top: 9px;
+    margin-bottom: 12px;
 }
-.classcontent{
-    font-family: Roboto;
-    font-style: normal;
+
+.classcontent {
     font-weight: 500;
     font-size: 22px;
     line-height: 26px;
-    display: flex;
+    display: block;
     align-items: center;
     color: #000000;
 }
