--- a/FrontEnd/templates/FrontEnd/base/header.html
+++ b/FrontEnd/templates/FrontEnd/base/header.html
@@ -1,1 +1,7 @@
-<header>首頁標頭</header>
+<header>
+    <div class="header-wrap">
+        <div class="header-bg">
+            <h1>Big Maker Base</h1>
+        </div>
+    </div>
+</header>
