--- a/FrontEnd/templates/FrontEnd/base/footer.html
+++ b/FrontEnd/templates/FrontEnd/base/footer.html
@@ -1,1 +1,26 @@
-<footer>頁尾</footer>
+<footer>
+    <div class="container-fluid footer-bg">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-12 col-md-6 contact">
+                    <h3 class="title">聯絡資訊</h3>
+                    <ul class="list-unstyled">
+                        <li>負責人 陳小姐</li>
+                        <li> 電話：<a href="tel:+0912345678">0912354678</a> 地址：雲科大 A 102</li>
+                        <li>服務時間：週一至週五 09:00 - 18:00 (不含例假日)</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6 system">
+                    <h3 class="title">BigMaker</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="#">BigMaker 選課系統</a></li>
+                        <li><a href="#">BigMaker 借用系統</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 text-right">
+                    @自造者 2022
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
