--- a/FrontEnd/templates/FrontEnd/course-page/course-page.html
+++ b/FrontEnd/templates/FrontEnd/course-page/course-page.html
@@ -4,6 +4,7 @@
 
 {% load static%}
 <link rel="stylesheet" href="{% static 'css/course-page/course-page.css' %}">
+<link rel="stylesheet" href="{% static 'css/fontawesome-free-6.0.0-web/css/all.min.css' %}">
 
 {% endblock %}
 
@@ -13,9 +14,11 @@
 <section class="container">
     
     <div class="titlespace">
-        <img src="../../../../static/img/course-page/wrench.png" class="titleimg">
+        <div class="left">
+            <span class="fa-solid fa-wrench"></span>
+            <p class="title">課程名稱</p>
+        </div>
         <div class="date">2022/01/29</div>
-        <div class="title">課程名稱</div>
     </div>
     <hr class="wire">
     <div class="content">內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容</div>
