--- a/MakerCenter/static/scss/all.css
+++ b/MakerCenter/static/scss/all.css
@@ -7251,4 +7251,4 @@ a.text-dark:hover, a.text-dark:focus {
   .sticky-top.scrolled .nav-item {
     border: none; } }
 
-/*# sourceMappingURL=all.css.map */
+/*# sourceMappingURL=../../../../static/scss/all.css.map */
