完成 course_introduction_section & about_us_section

--- a/static/scss/pages/_layout.scss
+++ b/static/scss/pages/_layout.scss
@@ -1,6 +1,10 @@
 $primary: #be0000;
 $secondary: #d1ccd1;
 
+section{
+    margin-bottom: 60px;
+}
+
 // ====== header Start =======
 
 .header-wrap {
