--- a/FrontEnd/templates/FrontEnd/index/index.html
+++ b/FrontEnd/templates/FrontEnd/index/index.html
@@ -9,5 +9,7 @@
 {% block main %}
 
 <!-- 會匯入其他頁面 -->
+{% include 'FrontEnd/course_introduction_section/course_introduction_section.html' %}
+{% include 'FrontEnd/about_us_section/about_us_section.html' %}
 
 {% endblock %}
