--- a/MakerCenter/static/scss/all.css
+++ b/MakerCenter/static/scss/all.css
@@ -7198,6 +7198,9 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
+section {
+  margin-bottom: 60px; }
+
 .header-wrap {
   filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5)); }
 
@@ -7251,4 +7254,68 @@ a.text-dark:hover, a.text-dark:focus {
   .sticky-top.scrolled .nav-item {
     border: none; } }
 
-/*# sourceMappingURL=../../../../static/scss/all.css.map */
+.course .card-title {
+  padding: 30px; }
+
+.course .hover-text {
+  visibility: hidden;
+  opacity: 0; }
+
+.course-item {
+  margin-top: 10px; }
+
+.course-item:hover .hover-text {
+  transition: 0.5s;
+  visibility: visible;
+  opacity: 1; }
+
+.course .btn-primary {
+  background-color: #ff8f8f;
+  border-color: #ff8f8f; }
+  .course .btn-primary:hover, .course .btn-primary:focus, .course .btn-primary:not(:disabled):not(.disabled):active {
+    background-color: #fd6c6c;
+    border-color: #fd6c6c;
+    box-shadow: 0 0 0 0.2rem rgba(253, 108, 108, 0.5); }
+
+.about-us-bg-primary {
+  background-color: #fd4c4c;
+  padding-right: 0; }
+  .about-us-bg-primary .title,
+  .about-us-bg-primary .sub-title {
+    display: flex;
+    flex-direction: row;
+    font-weight: 700;
+    margin-left: 60px; }
+    .about-us-bg-primary .title::after,
+    .about-us-bg-primary .sub-title::after {
+      content: "";
+      flex: 1 1;
+      border-bottom: 4px solid white;
+      margin: auto; }
+  .about-us-bg-primary .title {
+    margin-top: 60px; }
+  .about-us-bg-primary .sub-title {
+    margin-top: 120px; }
+  .about-us-bg-primary p {
+    margin-left: 45px;
+    padding-bottom: 60px; }
+
+.about-us-bg-secondary {
+  background-color: #ff8f8f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between; }
+  .about-us-bg-secondary .title {
+    margin-top: 60px; }
+  .about-us-bg-secondary .sub-title {
+    padding-bottom: 60px; }
+  .about-us-bg-secondary .heightlight {
+    font-weight: 700;
+    font-size: 30px; }
+    .about-us-bg-secondary .heightlight span {
+      display: block;
+      color: white;
+      text-align: center; }
+
+/*# sourceMappingURL=all.css.map */
