--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -30,14 +30,13 @@
             <p class="content">微學分課程及工作訪</p>
         </div>
     </div>
-
     <div class="container">
 
         <div class="box" v-for="classbox in filteredList">
             <div class="markbox">
                 <p class="amark">${classbox.type}</p>
             </div>
-            <img class="coursephoto" v-bind:src="'media/'+classbox.image" v-bind:alt="classbox.image">
+            <img class="coursephoto" v-bind:src="'{{MEDIA_URL}}'+classbox.image" v-bind:alt="classbox.image"/>
             <div class="classdate">${classbox.update_date}</div>
             <div class="classtitle">${classbox.title}</div>
             <div class="classcontent" v-html="classbox.content"> </div>
@@ -59,13 +58,11 @@
             classbox: []
         },
         mounted: function () {
-            axios.post("{% url 'manage' 'course' %}")
+            axios.post("{% url 'apigetdblist' 'course' %}")
                 .then((response) => {
-                    console.log(response.data.datalist[0]);
                     this.classbox = response.data.datalist;
                 })
                 .catch((error) => console.log(error));
-
         },
         methods: {
             changeType(gettype) {
