--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -16,22 +16,31 @@
 
 <section class="container-0" id="app">
     <div class="searchspace">
-        <input class="searchbox" type="text" v-model="search" placeholder="Search 課程名稱.." />
+        
         <div class="rightspace">
-            <span class="fa-solid fa-wrench"></span>
             <div class="wire">
-                <p class="content" @click="changeType('專業')">專業實作課程</p>
+                <div class="color-1">
+                    <span class="fa-solid fa-wrench"></span>                
+                    <p class="content" @click="changeType('專業')">專業實作課程</p>
+                </div>
             </div>
-            <span class="fa-solid fa-gavel"></span>
             <div class="wire">
-                <p class="content" @click="changeType('核心')">核心實作課程</p>
+                <div class="color-2">
+                    <span class="fa-solid fa-gavel"></span>
+                    <p class="content" @click="changeType('核心')">核心實作課程</p>
+                </div>
             </div>
-            <span class="fa-solid fa-hammer"></span>
-            <p class="content">微學分課程及工作訪</p>
-        </div>
-    </div>
-    <div class="container">
+            <div class="color-3">
+                <span class="fa-solid fa-hammer"></span>
+                <p class="content">微學分課程及工作訪</p>
+            </div>
 
+        </div>
+        <input class="searchbox" type="text" v-model="search" placeholder="Search 課程名稱.." />
+    </div>
+
+
+    <div class="container">
         <div class="box" v-for="classbox in filteredList">
             <div class="markbox">
                 <p class="amark">${classbox.type}</p>
