更改專案小組

--- a/FrontEnd/templates/FrontEnd/base_single/base_single.html
+++ b/FrontEnd/templates/FrontEnd/base_single/base_single.html
@@ -13,9 +13,9 @@
     <div class="title">{{datatitle}}{{data.title}}</div>
     <hr class="wire">
     
-    {{data.content | safe}}
-    <div class="content">
-
+    
+    <div>
+        {{data.content | safe}}
     </div>
 
 </section>
