--- a/static/css/equipment_intro/equipment_intro.css
+++ b/static/css/equipment_intro/equipment_intro.css
@@ -1,30 +1,50 @@
-.container{
-    font-family: Roboto;  font-style: normal;
+.container {
+    font-family: Roboto;
+    font-style: normal;
 }
-.title{
-    font-size: 48px;  line-height: 56px;
-    display: flex; margin: 60px auto 50px;
-    align-items: center;  text-align: center;
+
+.title {
+    font-size: 48px;
+    line-height: 56px;
+    display: flex;
+    margin: 60px auto 50px;
+    align-items: center;
+    text-align: center;
     justify-content: center;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
-.tablestyle{
-    border-style: solid; border-color: #000000;
-    border-collapse: collapse; margin: 40px auto 110px;
-    font-size: 24px;color: #000000;
+
+.tablestyle {
+    border-style: solid;
+    border-color: #000000;
+    border-collapse: collapse;
+    margin: 40px auto 110px;
+    font-size: 24px;
+    color: #000000;
 }
-.bg-danger{
-    font-size: 28px; line-height: 33px;
+
+.bg-danger {
+    font-size: 28px;
+    line-height: 33px;
 }
-.searchbox{
-    width: 24%; height: 35px ; position: relative;
+
+.searchbox {
+    width: 24%;
+    height: 35px;
+    position: relative;
     background-color: #ffffff;
     border: 1px solid #000000;
     box-sizing: border-box;
-    border-radius: 5px; margin-top: -3%;
-    display: flex; align-items: center;
+    border-radius: 5px;
+    margin-top: -3%;
+    display: flex;
+    align-items: center;
 }
-.searchtext{
-    font-size: 20px; color: #CCCCCC;
-    line-height: 24px; position: relative; top:20%;
+
+.searchtext {
+    font-size: 20px;
+    color: #CCCCCC;
+    line-height: 24px;
+    position: relative;
+    top: 20%;
 }
