--- a/static/css/course/course_list.css
+++ b/static/css/course/course_list.css
@@ -1,5 +1,6 @@
 .cintainer-0 {
-    font-family: Roboto;  font-style: normal;
+    font-family: Roboto;
+    font-style: normal;
 }
 
 .container {
@@ -9,67 +10,101 @@
     flex-flow: row wrap;
     justify-content: center;
 }
-.searchspace{
-    width: 67%; margin: auto;
+
+.searchspace {
+    width: 67%;
+    margin: auto;
 }
+
 .searchbox {
-    width: 24%;  height: 35px;
-    position: relative; float: left;
+    width: 24%;
+    height: 35px;
+    position: relative;
+    float: left;
     background-color: #ffffff;
     border: 1px solid #000000;
-    box-sizing: border-box;  border-radius: 5px;
+    box-sizing: border-box;
+    border-radius: 5px;
     /*padding-left: 10px;*/
 }
 
 .rightspace {
-    display: flex;  align-items: center;
-    width: auto;  height: 50%; float: right;
-    position: relative;  
-    font-size: 22px;  line-height: 26px;
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: 50%;
+    float: right;
+    position: relative;
+    font-size: 22px;
+    line-height: 26px;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
 
 .content {
     margin: auto 12px auto 10px;
 }
+
 .color-1 {
-    display: flex; align-items: center;
+    display: flex;
+    align-items: center;
     margin-right: 10px;
 }
-.color-1:hover{
-    background-color: #FF4F18;  color: #ffffff;
-    width: 181px; height: 30px;
+
+.color-1:hover {
+    background-color: #FF4F18;
+    color: #ffffff;
+    width: 181px;
+    height: 30px;
     border-radius: 5px;
-    display: flex; align-items: center;
-    padding-left: 5px; text-align: justify;
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
+    text-align: justify;
 }
+
 .color-2 {
-    display: flex; align-items: center;
-    margin-left: 10px;margin-right: 10px;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
 }
-.color-2:hover{
-    background-color: #449BEB;  color: #ffffff;
-    width: 181px; height: 30px;
+
+.color-2:hover {
+    background-color: #449BEB;
+    color: #ffffff;
+    width: 181px;
+    height: 30px;
     border-radius: 5px;
-    display: flex; align-items: center;
-    padding-left: 5px; text-align: justify;
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
+    text-align: justify;
 }
+
 .color-3 {
-    display: flex; align-items: center;
-    margin-left: 10px; text-align: center;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    text-align: center;
 }
-.color-3:hover{
-    background-color: #A237C8;  color: #ffffff;
-    width: 250; height: 30px;
+
+.color-3:hover {
+    background-color: #A237C8;
+    color: #ffffff;
+    width: 250;
+    height: 30px;
     border-radius: 5px;
-    display: flex; align-items: center;
-    padding-left: 5px; text-align: justify;
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
+    text-align: justify;
 }
 
 .wire {
     border-right: 2px solid #C4C4c4;
     cursor: pointer;
-    display: flex; align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .box {
@@ -140,8 +175,8 @@
 }
 
 @media (max-width:1320px) {
-    .rightspace{
-        float:left;
+    .rightspace {
+        float: left;
         margin-bottom: 20px;
     }
 }
