--- a/static/css/course/course_list.css
+++ b/static/css/course/course_list.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-    margin: auto;
+    /*margin: 40px auto;*/
     width: 80%;
     display: flex;
     flex-flow: row wrap;
@@ -48,6 +48,7 @@
     display: flex;
     align-items: center;
     margin-right: 10px;
+    margin-left: 10px;
 }
 
 .color-1:hover {
@@ -112,7 +113,7 @@
     width: 323px;
     margin-left: 50px;
     margin-right: 50px;
-    margin-bottom: 80px;
+    margin-bottom: 30px;
     padding: auto;
 }
 
@@ -144,13 +145,14 @@
     font-size: 20px;
     line-height: 23px;
     /*margin-left: 85%;*/
-    align-items: center;
+    /*align-items: center;*/
     display: flex;
 }
 
 .amark {
     padding-left: 12px;
     color: rgb(255, 255, 255);
+    padding-top: 2px;
 }
 
 .classdate {
@@ -176,7 +178,12 @@
 
 @media (max-width:1320px) {
     .rightspace {
-        float: left;
-        margin-bottom: 20px;
+        float: right;
+        margin-left: 20px;
+        display: block;
+    }
+
+    .wire {
+        border-right: none;
     }
 }
