套上單頁測試

--- a/FrontEnd/templates/FrontEnd/base_single/base_single.html
+++ b/FrontEnd/templates/FrontEnd/base_single/base_single.html
@@ -10,9 +10,9 @@
 {% block main %}
 
 <section class="container">
-    <div class="title">{{datatitle}}{{data.title}}</div>
+    <div class="title">{{data.datatitle}}{{data.title}}</div>
     <hr class="wire">
-    
+
     
     <div>
         {{data.content | safe}}
