更新nav/部分版面微調

--- a/FrontEnd/templates/FrontEnd/download/download.html
+++ b/FrontEnd/templates/FrontEnd/download/download.html
@@ -10,7 +10,7 @@
 
 {% block main %}
 
-<section class="container">
+<section class="container-1">
     <div class="rightspace">
         <div class="text-1">專業領域小組</div>
         <div class="text-2">課程</div>
