--- a/FrontEnd/templates/FrontEnd/members_intro/members_intro.html
+++ b/FrontEnd/templates/FrontEnd/members_intro/members_intro.html
@@ -11,8 +11,8 @@
 {% block main %}
 
 
-<section class="container">
-    <div class="title">成員快訊</div>
+<section class="container-1">
+    <div class="title-1">成員快訊</div>
     
     <div class="searchbox"><p class="searchtext">　Search..</p></div>
     
