--- a/FrontEnd/templates/FrontEnd/base/nav.html
+++ b/FrontEnd/templates/FrontEnd/base/nav.html
@@ -14,8 +14,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                         <a class="dropdown-item" href="#">召集人</a>
-                        <a class="dropdown-item" href="#">成員</a>
-                        <a class="dropdown-item" href="#">位置</a>
+                        <a class="dropdown-item" href="{%url 'members_intro' %}">成員</a>
+                        <a class="dropdown-item" href="{%url 'position' %}">位置</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -24,15 +24,15 @@
                         專業領域小組
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                        <a class="dropdown-item" href="#">智慧製造</a>
-                        <a class="dropdown-item" href="#">資訊通</a>
-                        <a class="dropdown-item" href="#">機器人</a>
-                        <a class="dropdown-item" href="#">創課</a>
-                        <a class="dropdown-item" href="#">元宇宙</a>
+                        <a class="dropdown-item" href="{%url 'classshow' 1 %}">智慧製造</a>
+                        <a class="dropdown-item" href="{%url 'classshow' 2 %}">資訊通</a>
+                        <a class="dropdown-item" href="{%url 'classshow' 3 %}">機器人</a>
+                        <a class="dropdown-item" href="{%url 'classshow' 4 %}">創課</a>
+                        <a class="dropdown-item" href="{%url 'classshow' 5 %}">元宇宙</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">最新公告</a>
+                    <a class="nav-link text-dark" href="{%url 'news_list' %}">最新公告</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown3" role="button"
@@ -40,7 +40,7 @@
                         課程列表
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                        <a class="dropdown-item" href="#">專業實作課程</a>
+                        <a class="dropdown-item" href="{%url 'course_list' %}">專業實作課程</a>
                         <a class="dropdown-item" href="#">核心實作課程</a>
                         <a class="dropdown-item" href="#">微學分課程及工作坊</a>
                     </div>
@@ -51,12 +51,12 @@
                         空間介紹
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
-                        <a class="dropdown-item" href="#">空間介紹</a>
-                        <a class="dropdown-item" href="#">設備介紹</a>
+                        <a class="dropdown-item" href="{%url 'space_intro' %}">空間介紹</a>
+                        <a class="dropdown-item" href="{%url 'equipment_intro' %}">設備介紹</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">相關辦法</a>
+                    <a class="nav-link text-dark" href="{%url 'download' %}">相關辦法</a>
                 </li>
             </ul>
         </div>
