--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -40,7 +40,7 @@
     </div>
 
 
-    <div class="container">
+    <div class="container-1">
         <div class="box" v-for="classbox in filteredList" v-bind:class="classbox.typecss">
             <img class="coursephoto" v-bind:src="'{{MEDIA_URL}}'+classbox.image" v-bind:alt="classbox.image" />
             <div class="classdate">${classbox.update_date}</div>
