名稱+版面調整

--- a/FrontEnd/templates/FrontEnd/course-page/course-page.html
+++ b/FrontEnd/templates/FrontEnd/course-page/course-page.html
@@ -11,17 +11,17 @@
 {% block main %}
 
 
-<section class="container">
+<section class="container-1">
     
     <div class="titlespace">
         <div class="left">
             <span class="fa-solid fa-wrench"></span>
-            <p class="title">課程名稱</p>
+            <p class="title-1">課程名稱</p>
         </div>
         <div class="date">2022/01/29</div>
     </div>
     <hr class="wire">
-    <div class="content">內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容</div>
+    <div class="content-1">內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容內容</div>
     <img src="../../../../static/img/course-page/photo.png" class="img">
     <div class="back"><div class="text">＜ 回上一頁</div></div>
     
