--- a/FrontEnd/templates/FrontEnd/news_list/news_list.html
+++ b/FrontEnd/templates/FrontEnd/news_list/news_list.html
@@ -10,20 +10,20 @@
 
 {% block main %}
 
-<section class="container">
-    <div class="title"><img src="../../../../static/img/news-list/img.png">所有公告</div>    
+<section class="container-0">
+    <div class="title-1"><img src="../../../../static/img/news-list/img.png">所有公告</div>    
         
         <div class="rightspace">
             <span class="fa-solid fa-wrench"></span>
             <div class="wire">
-                <p class="content">公告</p>
+                <p class="content-1">公告</p>
             </div>
             <span class="fa-solid fa-gavel"></span>
             <div class="wire">
-                <p class="content">課程</p>
+                <p class="content-1">課程</p>
             </div>
             <span class="fa-solid fa-hammer"></span>
-            <p class="content">空間/設備</p>
+            <p class="content-1">空間/設備</p>
         </div>
         <input class="searchbox" type="text" v-model="search" placeholder="Search.." />
     
@@ -37,6 +37,7 @@
                 <div class="second_title">公告標題標題標題標題標題標...</div>
             </div>
         </div>
+
 
     </div>
 
