--- a/FrontEnd/templates/FrontEnd/position/position.html
+++ b/FrontEnd/templates/FrontEnd/position/position.html
@@ -9,9 +9,9 @@
 
 {% block main %}
 
-<section class="content">
-    <div class="container">
-        <p class="title">位置</p>
+<section class="content-1">
+    <div class="container-1">
+        <p >位置</p>
     </div>
     <div class="contenttext-0">
         <img src="../../../../static/img/position/map-pin.png" width="40px" height="40px">　位置 : 雲林縣斗六市大學路三段123號
