--- a/FrontEnd/templates/FrontEnd/base_single/base_single.html
+++ b/FrontEnd/templates/FrontEnd/base_single/base_single.html
@@ -9,8 +9,8 @@
 
 {% block main %}
 
-<section class="container">
-    <div class="title">{{data.datatitle}}{{data.title}}</div>
+<section class="container-1">
+    <div class="title-1">{{data.datatitle}}{{data.title}}</div>
     <hr class="wire">
 
     
