--- a/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
+++ b/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
@@ -11,8 +11,8 @@
 {% block main %}
 
 
-<section class="container">
-    <div class="title">設備介紹</div>
+<section class="container-1">
+    <div class="title-1">設備介紹</div>
     
     <div class="searchbox"><p class="searchtext">　Search..</p></div>
     
