--- a/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
+++ b/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
@@ -10,8 +10,8 @@
 
 {% block main %}
 
-<section class="container">
-    <div class="title">空間介紹</div>
+<section class="container-1">
+    <div class="title-1">空間介紹</div>
     
     <div class="searchbox"><p class="searchtext">　Search..</p></div>
     
