--- a/static/css/course-page/course-page.css
+++ b/static/css/course-page/course-page.css
@@ -1,49 +1,77 @@
-.cintainer{
-    font-family: Roboto;  font-style: normal;
+.cintainer-1 {
+    font-family: Roboto;
+    font-style: normal;
+    width: 58%;
+    margin: auto;
 }
-.titlespace{
-    display: flex ;align-items: center;
-    width: 80%; height: 70px;
-    margin: 100px auto auto;
-}
-.date{
+
+.titlespace {
     display: flex;
+    width: 80%;
+    height: 70px;
+    margin: 100px auto auto;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.date {
+    height: 28px;
+    font-size: 24px;
+    line-height: 28px;
+    text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
+}
+
+.left {
+    display: flex;
+    left: -7%;
+    font-size: 36px;
+    line-height: 42px;
     position: relative;
-    width: 9.7%; height: 28px ;right:-63%; 
-    font-size: 24px;line-height: 28px;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
+    align-items: center;
 }
-.left{
-    display: flex; left: -7%;
-    font-size: 36px;  line-height: 42px;
-    position: relative; 
-    text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
-}
-.title{
+
+.title-1 {
     padding-left: 20px;
+    padding-top: 10px;
 }
-.wire{
-    width: 80%; margin: 10px auto 70px;
+
+.wire {
+    width: 80%;
+    margin: 10px auto 70px;
     position: relative;
     border: 2px solid #A3A3A3;
 }
-.content{
-    width: 81%;margin: auto; display: flex;
-    font-size: 28px;  line-height: 33px;
+
+.content-1 {
+    width: 81%;
+    margin: auto;
+    display: flex;
+    font-size: 28px;
+    line-height: 33px;
     justify-content: center;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
-.img{
+
+.img {
     display: block;
     margin: 130px auto 80px auto;
 }
-.back{
-    width: 182px; height: 66px; position: relative;
-    display: flex ;align-items: center;left: 30%;
-    margin: 80px auto 45px auto; font-size: 28px; line-height: 40px;
+
+.back {
+    width: 182px;
+    height: 66px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    left: 30%;
+    margin: 80px auto 45px auto;
+    font-size: 28px;
+    line-height: 40px;
     color: #FFFFFF;
     background-color: #FD4C4C;
 }
-.text{
+
+.text {
     margin-left: 15px;
 }
