--- a/static/css/news_list/news_list.css
+++ b/static/css/news_list/news_list.css
@@ -1,7 +1,8 @@
-.cintainer {
+.cintainer-0 {
     font-family: Roboto;
     font-style: normal;
-    background-color: #FF7171;
+    width: 70%;
+    margin: auto;
 }
 
 .container-1 {
@@ -42,7 +43,7 @@
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
 
-.content {
+.content-1 {
     margin: auto 20px auto 10px;
 }
 
@@ -94,7 +95,7 @@
     align-items: center;
 }
 
-.title {
+.title-1 {
     display: flex;
     align-items: center;
     margin: 70px auto;
