--- a/static/css/position/position.css
+++ b/static/css/position/position.css
@@ -1,33 +1,47 @@
-.context{
-    font-family: Roboto;   font-style: normal;
-    
+.context-1 {
+    font-family: Roboto;
+    font-style: normal;
+
 }
-.container{
-    display: flex ;align-items: center;
-    font-size: 36px;  line-height: 42px;
-    margin: auto;   width: 80%;
+
+.container-1 {
+    display: flex;
+    align-items: center;
+    font-size: 36px;
+    line-height: 42px;
+    margin: auto;
+    width: 80%;
     /*flex-flow: row wrap;*/
     justify-content: center;
-    line-height: 56px; font-size: 48px;
-    padding-top: 85px; padding-bottom: 90px;
+    line-height: 56px;
+    font-size: 48px;
+    padding-top: 85px;
+    padding-bottom: 90px;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
-.contenttext-0{
-    display: flex ;align-items: center;
-    font-size: 36px;  line-height: 42px;
-    margin: auto;   width: 80%;
+
+.contenttext-0 {
+    display: flex;
+    align-items: center;
+    font-size: 36px;
+    line-height: 42px;
+    margin: auto;
+    width: 80%;
     padding: auto;
     height: 70px;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
 
-.contenttext-1{
-    display: flex ;
-    font-size: 36px;  line-height: 42px;
-    margin: 100px auto 30px auto;   width: 80%;
+.contenttext-1 {
+    display: flex;
+    font-size: 36px;
+    line-height: 42px;
+    margin: 100px auto 30px auto;
+    width: 80%;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
 }
-.img{
+
+.img {
     display: block;
     margin: 30px auto;
 }
