--- a/static/css/download/download.css
+++ b/static/css/download/download.css
@@ -7,12 +7,13 @@
 }
 
 .tablestyle {
-    border-style: solid;
+    border: solid 1px;
     border-color: #000000;
     border-collapse: collapse;
-    margin: 40px auto 110px;
+    margin: 40px auto 70px;
     font-size: 24px;
     color: #000000;
+    width: 100%;
 }
 
 .bg-danger {
@@ -57,7 +58,7 @@
     height: 30px;
     border-radius: 4px;
     background-color: #FF4F18;
-    margin: auto 4px;
+    margin-right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -69,7 +70,7 @@
     height: 30px;
     border-radius: 4px;
     background-color: #449BEB;
-    margin: auto 4px;
+    margin-right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,7 +82,7 @@
     height: 30px;
     border-radius: 4px;
     background-color: #A237C8;
-    margin: auto 4px;
+    margin-right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -93,32 +94,29 @@
     height: 30px;
     border-radius: 4px;
     background-color: #37C894;
-    margin: auto 4px;
+    margin-right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-@media (max-width:767px) {
+@media (max-width:1150px) {
     .rightspace {
         float: left;
-        width: auto;
-        margin-bottom: 10px;
     }
-
     .text-1 {
-        margin: 2px;
+        margin-bottom: 5px;
     }
 
     .text-2 {
-        margin: 2px;
+        margin-bottom: 5px;
     }
 
     .text-3 {
-        margin: 2px;
+        margin-bottom: 5px;
     }
 
     .text-4 {
-        margin: 2px;
+        margin-bottom: 5px;
     }
 }
